[gd_scene load_steps=3 format=3 uid="uid://c45eaqgi4lu46"]

[ext_resource type="Script" uid="uid://bhbkx4lrgcssa" path="res://ui/friend/search_result_item.gd" id="1_hdm2m"]
[ext_resource type="Theme" uid="uid://8o8bmos7gb0u" path="res://assets/cartoon_ui_theme.tres" id="1_p1vgf"]

[node name="SearchResultItem" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p1vgf")
script = ExtResource("1_hdm2m")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AvatarRequest" type="HTTPRequest" parent="HBoxContainer"]

[node name="AvatarTexture" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "請求者名稱"

[node name="LevelLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "向你發送了好友邀請"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddFriendButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "加為好友"
